--- a/main_window.ui
+++ b/main_window.ui
@@ -6,12 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>997</width>
-    <height>600</height>
+    <width>1460</width>
+    <height>750</height>
    </rect>
   </property>
+  <property name="baseSize">
+   <size>
+    <width>1700</width>
+    <height>650</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Новый прием</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>icons/main_icon32.ico</normaloff>icons/main_icon32.ico</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -62,7 +72,7 @@
      <string>PushButton</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="textEdit">
+   <widget class="QTextEdit" name="symptomsET">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -70,6 +80,15 @@
       <width>261</width>
       <height>251</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: 2px solid #ABABAB;
+border-radius: 10px;</string>
     </property>
    </widget>
    <widget class="QTextEdit" name="textEdit_2">
@@ -82,17 +101,46 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="symptomLabel">
     <property name="geometry">
      <rect>
-      <x>40</x>
+      <x>20</x>
       <y>280</y>
-      <width>49</width>
-      <height>16</height>
+      <width>104</width>
+      <height>29</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-top-left-radius: 10px;
+border-top-right-radius: 10px;
+border: 2px solid #ABABAB;
+min-height: 25px;
+min-width: 100px;
+max-height: 25px;
+max-width: 100px;
+background-color: #DADADA;
+text-alignment: center;</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::NoFrame</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="lineWidth">
+     <number>1</number>
+    </property>
+    <property name="midLineWidth">
+     <number>1</number>
+    </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>симптомы</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
@@ -114,7 +162,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>997</width>
+     <width>1460</width>
      <height>22</height>
     </rect>
    </property>
